<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Mortgage Calculator</string>
    <string name="housePrice">House Price</string>
    <string name="downPaymentAmount">Down Payment Amount</string>
    <string name="annualInterestRate">Annual Interest Rate</string>
    <string name="lengthOfMortgageLoan">Mortgage Loan Length(in years)</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="monthlyPayment">Monthly Payment</string>
    <string name="totalPayment">Total Payment</string>
    <string name="intZero">0</string>
    <string name="doubleZero">0.0</string>
    <string name="missingEntries">Missing Entries</string>
    <string name="provideEntries">Please enter the values first</string>
    <string name="OK">OK</string>

</resources>
